--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
     <!-- Medipro CSS -->
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    
     <link rel="stylesheet" href="css/responsive.css" />
     <link rel="stylesheet" href="../projectmid_term/css/enviroment.css" />
   </head>
